  x Progression Data: Requires hasProgData to be true to use
   * saveData: Bound to SaveState (current slugcat)
   * persData: Bound to DeathPersistentData (current slugcat); Stays persistent regardless of death or quit
   * miscData: Bound to ProgressionData (current saveslot); Stays persistent regardless of death/quit or slugcat change
- Added internal support for Chinese translation using CommunicaitonModule
 + Chinese Translation for ConfigMachine is planned
###1.5.4#!#20210704#!#
1.5.4.4
- Fixed OpResourceSelector and OpResourceList breaking with the last fix
1.5.4.3
- ListItem now has a property called displayName (by PJB)
 + Useful for supporting Translation
 + Also fixed OpResourceSelector and OpResourceList not working properly with EnumExtender
- Config Machine now initializes with ProcessManager (by Henpemaz)
 + Fixes CM not initializing with Extended DevTools' skip_title feature
1.5.4.2
- Reverted some of LabelTest changes to restore compatibility with CRS
- Config Machine will now use AssemblyDescription to describe mods that doesn't support CM
1.5.4.1
- Rearranged LabelTest to accomodate ComunicationModule 2.5.0 Patch
- Also rearranged internal Changelog so the latest version always comes first
1.5.4.0
- Changed the message for mods that doesn't support CM to something less look like an error message but more neutral
- Added and modified several functions to make managing UIelements easier
 + Added several bulk managing static methods for OpTab: RemoveItemsFromTab, ShowItems, HideItems, DestroyItems, SetGreyedOutItems
 + Added OpScrollBox.RemoveItemsFromScrollBox
 + OpTab.RemoveItems (and RemoveItemsFromTab) now removes the item from its scrollBox
 + OpTab.AddItems now automatically calls RemoveItemsFromTab if the item is already in other OpTab
- OpScrollBox.SetContentSize is added
 + OpScrollBox.contentSize is now Obsolete; use GetContentSize instead
###1.5.3#!#20210405#!#
1.5.3.2
- Fixed OpLabelLong breaking with multiple linebreaks at once